--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bulma/bulma.sass"
+              "src/styles.scss"
             ],
             "scripts": []
           },
