--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@ngrx/schematics": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
+    "@progress/kendo-theme-bootstrap": "^4.10.2",
+    "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
     "core-js": "^2.5.4",
+    "ngx-swiper-wrapper": "^8.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
